# Shucaicaizhai-Diffusion-Policy

./: 1.sh  2.sh  README.md  sim.sh
imitation_learning_dp-master/: .gitignore  .gitmodules  README.md  collect_data.py  roll_out.py  train.py
imitation_learning_dp-master/imitation_learning_dp/arm/utils/: math_utils.py
imitation_learning_dp-master/imitation_learning_dp/assets/robotiq_2f85/: 2f85.xml
imitation_learning_dp-master/imitation_learning_dp/assets/scenes/: scene.xml
imitation_learning_dp-master/imitation_learning_dp/assets/universal_robots_ur5e/: ur5e.xml
imitation_learning_dp-master/imitation_learning_dp/config/: image_ur5_grab_diffusion_policy_cnn.yaml
imitation_learning_dp-master/imitation_learning_dp/dataset/: ur5_grab_image_dataset.py
imitation_learning_dp-master/imitation_learning_dp/env/ur5_grab/: ur5_grab_image_env.py
imitation_learning_dp-master/imitation_learning_dp/env_runner/: ur5_grab_image_runner.py
imitation_learning_dp-master/imitation_learning_dp/workspace/: simple_train_diffusion_unet_hybrid_workspace.py
ros_ws/devel/: .catkin  setup.sh
ros_ws/devel/include/bmirobot_move/: GraspServo.h  GraspServoRequest.h
ros_ws/devel/include/bmirobot_msg/: motorv2_fd.h
ros_ws/devel/include/bmirobot_tools/: PointsPR.h
ros_ws/devel/include/control_try/: simulate.h  simulateResponse.h
ros_ws/devel/lib/bmirobot_hw/: bmirobotv51_hw  bmirobotv51_two
ros_ws/devel/lib/bmirobot_tools/: polhemus2_driver  polhemus3_driver  record_msg
ros_ws/devel/lib/control_try/: gazebo_dataset  moveit_continue  moveit_dataset
ros_ws/devel/lib/gazebo_state_plugins/: gazebo_request_object_info
ros_ws/devel/lib/gazebo_test_tools/: set_gazebo_physics_client
ros_ws/devel/lib/object_msgs_tools/: object_tf_broadcaster_node
ros_ws/devel/lib/pkgconfig/: bmirobot_control.pc  bmirobot_gazebo.pc  bmirobot_move.pc  bmirobot_moveit.pc  bmirobot_moveit_v52.pc  bmirobot_try.pc  bmirobot_visual_detection.pc  bmirobotv4.pc  gazebo_grasp_plugin.pc  gazebo_state_plugins.pc  gazebo_version_helpers.pc  gazebo_world_plugin_loader.pc  object_msgs_tools.pc  robotarm_moveit.pc  test_robot.pc
ros_ws/src/bmirobot_pkg/bmirobot_control/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  controllers_plugins.xml
ros_ws/src/bmirobot_pkg/bmirobot_control/catkin_generated/: pkg.installspace.context.pc.py
ros_ws/src/bmirobot_pkg/bmirobot_control/catkin_generated/installspace/: bmirobot_control.pc  bmirobot_controlConfig.cmake
ros_ws/src/bmirobot_pkg/bmirobot_control/config/: bmirobot_control.yaml  robotarm_control.yaml
ros_ws/src/bmirobot_pkg/bmirobot_control/launch/: bmirobotv5_two_control.launch
ros_ws/src/bmirobot_pkg/bmirobot_description/: CTestTestfile.cmake  Makefile  cmake_install.cmake
ros_ws/src/bmirobot_pkg/bmirobot_gazebo/: CMakeLists.txt  CTestTestfile.cmake
ros_ws_a/src/bmirobot_pkg/bmirobot_move/: CMakeLists.txt  cmake_install.cmake
ros_ws_a/src/bmirobot_pkg/bmirobot_move/catkin_generated/: bmirobot_move-msg-extras.cmake.develspace.in  package.cmake  pkg.develspace.context.pc.py
ros_ws_a/src/bmirobot_pkg/bmirobot_move/catkin_generated/installspace/: bmirobot_move-msg-paths.cmake  bmirobot_move.pc  bmirobot_moveConfig.cmake
ros_ws_a/src/bmirobot_pkg/bmirobot_move/launch/: grasp_bear.launch  grasp_service (copy).launch
ros_ws_a/src/bmirobot_pkg/bmirobot_move/src/: IK_motion_planning.cpp  Polhemus_IK_one.cpp  Polhemus_control.cpp  Polhemus_controlV1.cpp  Polhemus_control_left.cpp  bmirobot_IK_key.cpp  bmirobot_IK_motion.cpp
ros_ws_a/src/bmirobot_pkg/bmirobot_move/srv/: GraspServo.srv
(+609 files in other folders)
